[gd_scene load_steps=13 format=3 uid="uid://bp0wyspt03gts"]

[ext_resource type="Script" path="res://level_2.gd" id="1_8ise5"]
[ext_resource type="Texture2D" uid="uid://dt66rt3upufyf" path="res://backgrounds/background2/background 2.jpg" id="2_ckdcs"]
[ext_resource type="Texture2D" uid="uid://2dk8h84prinq" path="res://backgrounds/background2/fog_background.png" id="3_i5axn"]
[ext_resource type="PackedScene" uid="uid://2tvohq7u2ygs" path="res://player.tscn" id="4_kc4jn"]
[ext_resource type="PackedScene" uid="uid://cge8mgijxca8v" path="res://kill_plane.tscn" id="5_qwgbu"]
[ext_resource type="PackedScene" uid="uid://coom2gtmojaa0" path="res://answer_spawn.tscn" id="6_rdr6r"]
[ext_resource type="PackedScene" uid="uid://mouvuk22mn85" path="res://hud.tscn" id="7_3xd0d"]
[ext_resource type="Texture2D" uid="uid://h18vapfqo11b" path="res://backgrounds/pause-button.png" id="8_lqu3v"]

[sub_resource type="Shader" id="Shader_alxhd"]
code = "shader_type canvas_item;

void fragment() {
	COLOR = texture(TEXTURE, vec2(UV.x, UV.y - TIME * 0.03));
}

//void light() {
	// Called for every pixel for every light affecting the CanvasItem.
	// Uncomment to replace the default light processing function with this one.
//}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_idfbq"]
shader = SubResource("Shader_alxhd")

[sub_resource type="Shader" id="Shader_201hp"]
code = "shader_type canvas_item;

void fragment() {
	COLOR = texture(TEXTURE, vec2(UV.x, UV.y - TIME * 0.1));
	COLOR.a -= 0.3;
}

//void light() {
	// Called for every pixel for every light affecting the CanvasItem.
	// Uncomment to replace the default light processing function with this one.
//}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f55dm"]
shader = SubResource("Shader_201hp")

[node name="Level2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8ise5")

[node name="TextureRect" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_idfbq")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ckdcs")

[node name="TextureRect2" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_f55dm")
layout_mode = 0
offset_left = -926.0
offset_top = -810.0
offset_right = 2074.0
offset_bottom = 1557.0
texture = ExtResource("3_i5axn")

[node name="ResumeButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 380.0
offset_top = 424.0
offset_right = 728.0
offset_bottom = 515.0
text = "Resume"

[node name="HelpButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 362.0
offset_top = 292.0
offset_right = 741.0
offset_bottom = 389.0
text = "Instructions"

[node name="HelpOkButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 268.0
offset_top = 562.0
offset_right = 834.0
offset_bottom = 643.0
text = "Close"

[node name="HelpMessage" type="RichTextLabel" parent="."]
visible = false
layout_mode = 0
offset_left = 212.0
offset_top = 52.0
offset_right = 892.0
offset_bottom = 502.0
text = "Welcome to \"Redox: Protect The World\" - Your Comprehensive Guide!

Introduction & Mastering the Controls:
Embark on an unparalleled journey through a world where skill and knowledge pave the path to victory. To navigate this realm:

Movement: Use A and S to stride left or right through the game's landscapes.
Combat: Press the spacebar to unleash a barrage of attacks on your foes.
Grasp these controls firmly, for they are the foundation of your success.
Level 2 - The Equation's Secret:
The journey deepens into the realms of science, where the left side of the equation holds the key to advancement. Observation and analysis will reveal the secrets needed to conquer this stage and forge onward.

Remember, every challenge is an opportunity to grow both in the game and intellectually. Embrace the adventure, for your journey to mastery and enlightenment begins now!"

[node name="Player" parent="." instance=ExtResource("4_kc4jn")]
position = Vector2(286, 586)

[node name="KillPlane" parent="." instance=ExtResource("5_qwgbu")]

[node name="AnswerSpawn" parent="." instance=ExtResource("6_rdr6r")]

[node name="AnswerDisplaySprite" type="Sprite2D" parent="."]
position = Vector2(600, 300)

[node name="AnswerDisplayTimer" type="Timer" parent="."]

[node name="Hud" parent="." instance=ExtResource("7_3xd0d")]

[node name="FeedbackMessage" type="RichTextLabel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 982.0
offset_top = 572.0
offset_right = 1113.0
offset_bottom = 622.0
grow_horizontal = 2
grow_vertical = 0
text = "Wrong Answer"

[node name="PauseButton" type="Button" parent="."]
process_mode = 1
offset_left = 27.0
offset_top = 118.0
offset_right = 85.0
offset_bottom = 183.0
icon = ExtResource("8_lqu3v")

[connection signal="pressed" from="ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="HelpButton" to="." method="_on_help_button_pressed"]
[connection signal="pressed" from="HelpOkButton" to="." method="_on_help_ok_button_pressed"]
